Remove console.log Hide result text if invalid ip address Focus input when modal dialog is shown

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <p><a class="btn btn-primary btn-large" data-toggle="modal"
               href="#hostname" >Create a hostname for a specifc ip
        &raquo;</a></p>
-          <div class="result-text hide">
-          <h4>Your unique host-name is: <span
-          class="result"></span>.hostingstack.net</h4>
+       <div class="result-text hide">
+         <br />
+          <p>Your host-name is: <span
+          class="result"></span>.hostingstack.net</p>
           </div>
       </div>
 
